[package]
name = "lcp-cgen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ibc = { version = "0.29.0", default-features = false, features = ["std"] }
ibc-proto = { version = "0.26.0", default-features = false }
ibc-test-framework = { version = "0.22.0", default-features = false }
ibc-proto-relayer = { package = "ibc-proto", version = "0.24.1", default-features = false }
ibc-relayer = { version = "0.22.0", default-features = false }
ibc-relayer-types = "0.22.0"
tendermint-rpc = { version = "0.28", default-features = false }
tendermint-light-client-verifier = { version = "0.28", default-features = false }

clap = { version = "3.2", features = ["derive"] }
tempfile = "3"
anyhow = { version = "1.0.56" }
tokio = { version = "1.0" }
log = "0.4.8"
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { git = "https://github.com/marshallpierce/rust-base64", default-features = false, features = ["alloc"] }

lcp-types = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation", features = ["ibc"] }
host = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }
host-environment = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation", default-features = false }
store = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation", default-features = false }
commitments = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }
crypto = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }
keymanager = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }
enclave-api = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation", default-features = false }
ecall-commands = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }
attestation-report = { git = "https://github.com/datachainlab/lcp", branch = "message-aggregation" }

[features]
default = []
simulation = [
    "enclave-api/sgx-sw",
    "ecall-commands/sgx-sw"
]
